--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
     <p><strong>Discord:</strong> yodaonketaminee</p>
     <p><strong>GitHub:</strong> github.com/xHexy</p>
 
-    <a href="main.html" class="back-button">Back to Home</a>
+    <a href="index.html" class="back-button">Back to Home</a>
   </div>
 </div>
 
