--- a/Skills.html
+++ b/Skills.html
@@ -54,7 +54,7 @@
       <div class="slot-description">Get my Europass CV in a PDF format!</div>
     </a>
 
-    <a href="main.html" class="back-button">Back to Home</a>
+    <a href="index.html" class="back-button">Back to Home</a>
   </div>
 
 
