--- a/biography.html
+++ b/biography.html
@@ -37,7 +37,7 @@
           <p>  I love music — not just listening, I'm also very passionate about singing! Nature is my escape, and I enjoy hiking in the mountains, discovering new trails, and soaking in the beauty of the outdoors. Sports are another big part of my life; I love playing and watching football and basketball whenever I get the chance.</p>
             <p>Beyond my personal interests, I am a semi-active volunteer and a patrol leader in the Scout Troop "Equinox Scout", where I plan, as well as participate in activities related to scouting. Organizing educational activities for young scouts has taught me teamwork, leadership, and the value of giving back to my community. I’m always eager to learn, grow, and take on new challenges!</p>
        <div style="display:flex; justify-content:center"><img src="icons/me.jpg" alt="Me" style="border: 4px solid #06064f"></div>
-        <a href="main.html" class="back-button">Back to Home</a>
+        <a href="index.html" class="back-button">Back to Home</a>
     </div>
 </div>
 
