--- a/Education.html
+++ b/Education.html
@@ -59,7 +59,7 @@
       <li>Object-Oriented Analysis & Design</li>
     </ul>
 
-    <a href="main.html" class="back-button">Back to Home</a>
+    <a href="index.html" class="back-button">Back to Home</a>
   </div>
 </div>
 
